`Tree.Item`: fix actions getting stuck after click

--- a/packages/kiwi-react/src/bricks/TreeItem.css
+++ b/packages/kiwi-react/src/bricks/TreeItem.css
@@ -25,8 +25,8 @@
 		}
 
 		@media (any-hover: hover) {
-			&:where(:not(:hover, :focus-within)) {
-				--🥝tree-item-action-visibility: hidden;
+			&:where(:not(:hover, :focus-visible, :has(:focus-visible))) {
+				--🥝tree-item-actions-visibility: hidden;
 			}
 		}
 	}
